salesforce/companion/force-app/main/default/objects/Contact_Center_Action__e/Contact_Center_Action__e.object-meta.xml
<CustomObject>
    <label>Contact Center Action</label>
    <pluralLabel>Contact Center Actions</pluralLabel>
</CustomObject>