salesforce/companion/force-app/main/default/objects/Contact_Center_Action__e/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>