salesforce/companion/force-app/main/default/objects/Contact_Center_Action__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>