salesforce/companion/force-app/main/default/objects/Contact_Center_Action__e/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>